k8s_tasks/access_application_in_a_cluster/connect-a-front-end-to-a-back-end-using-a-service/hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  selector:
    matchLabels:
      app: hello
      tier: backend
      track: stable
  replicas: 7
  template:
    metadata:
      labels:
        app: hello
        tier: backend
        track: stable
    spec:
      containers:
        - name: hello
          image: "tomtsang/dockerlibraryk8s-hello-go-gke:latest"
          ports:
            - name: http
              containerPort: 80
