k8s_tasks/access_application_in_a_cluster/connect-a-front-end-to-a-back-end-using-a-service/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    app: hello
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
