k8s_tasks/access_application_in_a_cluster/connect-a-front-end-to-a-back-end-using-a-service/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: docker-registry
spec:
  rules:
    - host: test.com
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 80
            path: /
